Project

General

Profile

Actions

Bug #41250

closed

osd/PrimaryLogPG: Access destroyed references in finish_degraded_object

Added by tao ning over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rados
Component(RADOS):
OSD
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

see https://github.com/ceph/ceph/pull/29663

traceļ¼š

2019-08-14 12:33:12.362180 7f2760e18700 -1 *** Caught signal (Segmentation fault) **
 in thread 7f2760e18700 thread_name:tp_peering
 1: (()+0xa75700) [0x557a7e762700]
 2: (()+0xf5e0) [0x7f277b6e55e0]
 3: (std::basic_string<char, std::char_traits<char>, std::allocator<char> >::basic_string(std::string const&)+0x1b) [0x7f277b072f9b]
 4: (hobject_t::hobject_t(hobject_t const&)+0x23) [0x557a7e227f13]
 5: (PrimaryLogPG::finish_degraded_object(hobject_t const&)+0x22b) [0x557a7e36723b]
 6: (PrimaryLogPG::on_change(ObjectStore::Transaction*)+0x40b) [0x557a7e36429b]
 7: (PG::start_peering_interval(std::shared_ptr<OSDMap const>, std::vector<int, std::allocator<int> > const&, int, std::vector<int, std::allocator<int> > const&, int, ObjectStore::Transaction*)+0x819) [0x557a7e2c8cb9]
 8: (PG::RecoveryState::Reset::react(PG::AdvMap const&)+0x403) [0x557a7e2ca033]
 9: (boost::statechart::simple_state<PG::RecoveryState::Reset, PG::RecoveryState::RecoveryMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::react_impl(boost::statechart::event_base const&, void const*)+0x21c) [0x557a7e31451c]
 10: (boost::statechart::state_machine<PG::RecoveryState::RecoveryMachine, PG::RecoveryState::Initial, std::allocator<void>, boost::statechart::null_exception_translator>::send_event(boost::statechart::event_base const&)+0x6b) [0x557a7e2f135b]
 11: (boost::statechart::state_machine<PG::RecoveryState::RecoveryMachine, PG::RecoveryState::Initial, std::allocator<void>, boost::statechart::null_exception_translator>::process_queued_events()+0x91) [0x557a7e2f14b1]
 12: (PG::handle_advance_map(std::shared_ptr<OSDMap const>, std::shared_ptr<OSDMap const>, std::vector<int, std::allocator<int> >&, int, std::vector<int, std::allocator<int> >&, int, PG::RecoveryCtx*)+0x4a9) [0x557a7e2b4f09]
 13: (OSD::advance_pg(unsigned int, PG*, ThreadPool::TPHandle&, PG::RecoveryCtx*, std::set<boost::intrusive_ptr<PG>, std::less<boost::intrusive_ptr<PG> >, std::allocator<boost::intrusive_ptr<PG> > >*)+0x2cf) [0x557a7e1efc6f]


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #41447: mimic: osd/PrimaryLogPG: Access destroyed references in finish_degraded_objectResolvedKefu ChaiActions
Copied to RADOS - Backport #41448: nautilus: osd/PrimaryLogPG: Access destroyed references in finish_degraded_objectResolvedNathan CutlerActions
Actions #1

Updated by Kefu Chai over 4 years ago

  • Project changed from mgr to RADOS
  • Category set to Correctness/Safety
  • Status changed from New to Fix Under Review
  • Assignee set to tao ning
  • Backport set to mimic, nautilus
  • Component(RADOS) OSD added
Actions #2

Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41447: mimic: osd/PrimaryLogPG: Access destroyed references in finish_degraded_object added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41448: nautilus: osd/PrimaryLogPG: Access destroyed references in finish_degraded_object added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF