src/osd/PrimaryLogPG.cc
@@ -11418,7 +11418,7 @@ void PrimaryLogPG::remove_missing_object(const hobject_t &soid,
   assert(r == 0);
 }
 
-void PrimaryLogPG::finish_degraded_object(const hobject_t& oid)
+void PrimaryLogPG::finish_degraded_object(const hobject_t oid)
 {
   dout(10) << __func__ << " " << oid << dendl;
   if (callbacks_for_degraded_object.count(oid)) {
